feat(experimental): compare jlink runtime packaging